--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -16,7 +16,9 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/avatar.png" alt="Mayk Brito, modo escuro" />
+        <a href="https://app.rocketseat.com.br/me/maykbrito">
+          <img src="./assets/avatar.png" alt="Mayk Brito, modo escuro"
+        /></a>
         <p>@maykbrito</p>
       </div>
 
@@ -60,7 +62,7 @@
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
-      <footer>
+      <footer id="rocketseat">
         Feito com ♥ pela
         <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
       </footer>
