Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a href="#">Inscrever-se no NLW</a>
         </li>
         <li>
-          <a href="#">Baixar meu e-book</a>
+          <a href="avalia.html">Baixar meu e-book</a>
         </li>
         <li>
           <a href="https://github.com/maykbrito" target="_blank"
