--- a/avalia.html
+++ b/avalia.html
@@ -1,134 +1,136 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Avaliação de Produtos</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #f8f8f8;
-    padding: 20px;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Menu de Avaliações</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #fafafa;
+      margin: 0;
+      padding: 20px;
+    }
 
-  h1 {
-    text-align: center;
-    margin-bottom: 10px;
-  }
+    h1 {
+      text-align: center;
+      margin-bottom: 15px;
+      color: #333;
+    }
 
-  p {
-    text-align: center;
-    color: #555;
-    margin-bottom: 20px;
-  }
+    p {
+      text-align: center;
+      font-size: 1.1rem;
+      color: #666;
+      margin-bottom: 30px;
+    }
 
-  .item {
-    background: #fff;
-    padding: 12px;
-    margin-bottom: 15px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  }
+    .menu {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
 
-  .thumb {
-    width: 90px;
-    height: 90px;
-    border-radius: 10px;
-    background-size: cover;
-    background-position: center;
-    flex-shrink: 0;
-  }
+    .item {
+      background: #fff;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
+    }
 
-  .meta {
-    flex: 1;
-  }
+    .item:hover {
+      transform: scale(1.02);
+    }
 
-  .name {
-    font-weight: bold;
-    margin-bottom: 8px;
-    font-size: 1.1rem;
-  }
+    .item img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      display: block;
+    }
 
-  .stars {
-    display: flex;
-    gap: 5px;
-  }
+    .info {
+      padding: 15px;
+      text-align: center;
+    }
 
-  .star {
-    font-size: 1.8rem;
-    color: #ccc;
-    cursor: pointer;
-    transition: color 0.2s ease;
-  }
+    .info h3 {
+      margin-bottom: 10px;
+      font-size: 1.2rem;
+      color: #333;
+    }
 
-  .star.active {
-    color: gold;
-  }
-</style>
+    .stars {
+      font-size: 24px;
+      color: #ccc;
+      cursor: pointer;
+    }
+
+    .stars .active {
+      color: #ffb400;
+    }
+  </style>
 </head>
 <body>
+  <h1>Menu de Avaliações</h1>
+  <p>Experimente os nossos pratos e avalie com estrelas!</p>
 
-<h1>Avalie nossos produtos</h1>
-<p>Escolha quantas estrelas cada item merece!</p>
+  <div class="menu">
+    <div class="item" data-id="1">
+      <img src="https://source.unsplash.com/400x300/?pizza" alt="Pizza">
+      <div class="info">
+        <h3>Pizza Especial</h3>
+        <div class="stars">
+          ★★★★★
+        </div>
+      </div>
+    </div>
 
-<div class="item" data-id="1">
-  <div class="thumb" style="background-image:url('https://via.placeholder.com/90')"></div>
-  <div class="meta">
-    <div class="name">Produto 1</div>
-    <div class="stars">
-      <span class="star" data-value="1">★</span>
-      <span class="star" data-value="2">★</span>
-      <span class="star" data-value="3">★</span>
-      <span class="star" data-value="4">★</span>
-      <span class="star" data-value="5">★</span>
+    <div class="item" data-id="2">
+      <img src="https://source.unsplash.com/400x300/?hamburger" alt="Hambúrguer">
+      <div class="info">
+        <h3>Hambúrguer Gourmet</h3>
+        <div class="stars">
+          ★★★★★
+        </div>
+      </div>
+    </div>
+
+    <div class="item" data-id="3">
+      <img src="https://source.unsplash.com/400x300/?salad" alt="Salada">
+      <div class="info">
+        <h3>Salada Fit</h3>
+        <div class="stars">
+          ★★★★★
+        </div>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="item" data-id="2">
-  <div class="thumb" style="background-image:url('https://via.placeholder.com/90')"></div>
-  <div class="meta">
-    <div class="name">Produto 2</div>
-    <div class="stars">
-      <span class="star" data-value="1">★</span>
-      <span class="star" data-value="2">★</span>
-      <span class="star" data-value="3">★</span>
-      <span class="star" data-value="4">★</span>
-      <span class="star" data-value="5">★</span>
-    </div>
-  </div>
-</div>
+  <script>
+    document.querySelectorAll('.item').forEach(item => {
+      const starsContainer = item.querySelector('.stars');
+      const itemId = item.getAttribute('data-id');
+      let rating = localStorage.getItem('rating-' + itemId) || 0;
 
-<script>
-  // Carregar avaliações salvas
-  document.addEventListener("DOMContentLoaded", () => {
-    document.querySelectorAll(".item").forEach(item => {
-      const id = item.dataset.id;
-      const savedRating = localStorage.getItem("rating_" + id);
-
-      if (savedRating) {
-        highlightStars(item, parseInt(savedRating));
+      function renderStars(rating) {
+        starsContainer.innerHTML = '';
+        for (let i = 1; i <= 5; i++) {
+          const star = document.createElement('span');
+          star.textContent = '★';
+          star.classList.add(i <= rating ? 'active' : '');
+          star.addEventListener('click', () => {
+            rating = i;
+            localStorage.setItem('rating-' + itemId, rating);
+            renderStars(rating);
+          });
+          starsContainer.appendChild(star);
+        }
       }
 
-      item.querySelectorAll(".star").forEach(star => {
-        star.addEventListener("click", () => {
-          const value = parseInt(star.dataset.value);
-          localStorage.setItem("rating_" + id, value);
-          highlightStars(item, value);
-        });
-      });
+      renderStars(rating);
     });
-  });
-
-  function highlightStars(item, rating) {
-    item.querySelectorAll(".star").forEach(star => {
-      star.classList.toggle("active", parseInt(star.dataset.value) <= rating);
-    });
-  }
-</script>
-
+  </script>
 </body>
 </html>
